--- a/playbooks/roles/deployment/tasks/main.yml
+++ b/playbooks/roles/deployment/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
     # Not necesary as it is gettign fetch from jenkins
-    # - name: fetching website code to servers
-    #   git:
-    #    repo: "{{ app_repository }}"
-    #    dest: "{{ frontend_project_path }}"
-    #    version: "{{ app_tag | default('HEAD') }}"
-    #    force: yes
+    - name: fetching website code to servers
+      git:
+        repo: "{{ app_repository }}"
+        dest: "{{ frontend_project_path }}"
+        version: "{{ app_tag | default('HEAD') }}"
+        force: yes
 
     - name: deploying website to httpd directory
       synchronize:
@@ -16,3 +16,4 @@
           - "--exclude=.git"
           - "--exclude=README.md"
         recursive: yes
+      delegate_to: "{{ inventory_hostname }}"
